<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOGINORREGIST.Regist"
    android:orientation="vertical"
    >


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:hint="@string/name"
        android:textAllCaps="false"
        android:textColorHint="@color/mov1"
        android:textColor="@color/mov1"
        android:padding="@dimen/_10sdp"
        android:textColorHighlight="@color/gray3"
        android:background="@drawable/edit_style"
        android:inputType="text"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        />

    <EditText

        android:id="@+id/emailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:hint="@string/email"
        android:textAllCaps="false"
        android:textColorHint="@color/mov1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/mov1"
        android:textColorHighlight="@color/gray3"
        android:background="@drawable/edit_style"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
       />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:hint="@string/password"
        android:textAllCaps="false"
        android:textColorHint="@color/mov1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/mov1"
        android:textColorHighlight="@color/gray3"
        android:background="@drawable/edit_style"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
     />



    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:hint="@string/id"
        android:textAllCaps="false"
        android:textColorHint="@color/mov1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/mov1"
        android:textColorHighlight="@color/gray3"
        android:background="@drawable/edit_style"
        android:inputType="number"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_33sdp"
        android:hint="@string/phone"
        android:textAllCaps="false"
        android:textColorHint="@color/mov1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/mov1"
        android:textColorHighlight="@color/gray3"
        android:background="@drawable/edit_style"
        android:inputType="number"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/mov1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:textColor="@color/mov1"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:padding="@dimen/_4sdp"
            android:textColor="@color/mov1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:textColor="@color/mov1"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_5sdp"
            android:padding="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_registration"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:background="@drawable/btn_style"
        android:text="@string/registration"
        android:textSize="@dimen/_18ssp"
        android:padding="@dimen/_10sdp"
        android:textAllCaps="false"
        android:textColor="@color/mov1"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_25sdp"
        />




</LinearLayout>